# gen_pwd

./: .gitignore  CMakeLists.txt  README.md  main.c
scripts/: build.ps1  install.ps1  start.ps1  test.ps1
src/utils/: utils.c  utils.h
tests/: test_generate_password.c  test_password_checks.c  test_random_char_and_string.c  test_random_int.c  test_safely_access_char_from_string.c
